<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HomeActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/bg"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_20sdp"
        android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp">

        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp"
            android:lineSpacingExtra="@dimen/_5sdp"
            android:fontFamily="@font/maax_medium"
            android:text="@string/about_app"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:padding="20dp"
        android:orientation="vertical"
        android:layout_marginTop="50dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            app:cardBackgroundColor="@color/sense"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="@dimen/_5sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:textColor="@android:color/white"
                android:layout_gravity="center"
                android:textSize="@dimen/_14sdp"
                android:fontFamily="@font/maax_medium"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_signin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            android:gravity="center"
            android:fontFamily="@font/maax_medium"
            android:text="@string/signin"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <TextView
                android:id="@+id/tv_tc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                android:fontFamily="@font/maax"
                android:text="@string/tc"/>

            <TextView
                android:id="@+id/tv_version"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                android:fontFamily="@font/maax"
                android:gravity="end"
                android:text="v1.0"/>

        </LinearLayout>

    </LinearLayout>
    </LinearLayout>

</RelativeLayout>
</layout>