<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/bg"/>
        <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp"
            tools:context=".ui.SignupActivity">

            <TextView
                android:id="@+id/tv_pofile_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/maax_medium"
                android:gravity="center"
                android:text="@string/welcome_monk"
                android:textColor="@color/light_sense"
                android:textSize="22dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/maax_medium"
                android:gravity="center"
                android:text="@string/welcome_monk_desc"
                android:textColor="@color/light_sense"
                android:textSize="16dp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|top"
                    android:orientation="vertical"
                    android:padding="20dp">


                    <ImageView
                        android:layout_width="@dimen/_120sdp"
                        android:layout_height="@dimen/_120sdp"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:src="@mipmap/avatar" />

                    <TextView
                        android:id="@+id/tv_create_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/maax_medium"
                        android:text="@string/welcome_add_photo"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="22dp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/maax_medium"
                            android:hint="D.O.B"
                            android:inputType="number"
                            android:singleLine="true" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/maax_medium"
                            android:hint="My Neigbourhood"
                            android:inputType="textEmailAddress"
                            android:singleLine="true" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="50dp">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/maax_medium"
                            android:hint="Sex"
                            android:inputType="textEmailAddress"
                            android:singleLine="true" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <Button
                        android:id="@+id/btn_create"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_btn"
                        android:fontFamily="@font/maax_medium"
                        android:text="Save"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="18dp" />

                </LinearLayout>


            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </RelativeLayout>
</layout>